--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="content">
             
             <h1 title="I am into Quality not Quantity">VASANTH S</h1>
-            <p>Welcome to my personel portfolio page.</p>
+            <p>Welcome to my personal portfolio page.</p>
             
             <div>
                 <button type="button"><span></span>RESUME</button>
